--- a/css/frameEcranApplication.css
+++ b/css/frameEcranApplication.css
@@ -37,7 +37,7 @@
     grid-template-columns: repeat(4, 0.5fr);
     grid-template-rows: 0.2fr 0.5fr 1.2fr 0.8fr ;
     justify-items: center;
-    height:73vh;
+    height:68vh;
     width:90vw;
     z-index: 1;
 }
@@ -49,7 +49,7 @@
     height:90px;
     width: 95vw;
     background-color: rgba(255, 255, 255, 0.2);
-    margin-bottom: 5vh;
+    margin-bottom: 10vh;
     z-index:1;
     align-items: center;
 }
@@ -119,6 +119,7 @@
     .applicationsBottom {
         width: 50vw;
         height: 100px;
+        margin-bottom: 5vh;
     }
     
     .application0,.application1,.application2,.application3,.application4,.application5,.application6,.application7,.application8,.application9,.application10,.application11,.application12,.application13,.application14,.application15,.application16,.application17,.application18{
@@ -131,6 +132,9 @@
     }
     .applicationBTitle1, .applicationBTitle2, .applicationBTitle3, .applicationBTitle4 {
         width: 75px;
+    }
+    .applicationsTop{
+        height:73vh;
     }
 }
 @media screen and (max-width:400px) {
