--- a/css/frameEcranProjets.css
+++ b/css/frameEcranProjets.css
@@ -140,6 +140,7 @@
     border-radius: 5px;
     border: none;
     cursor: pointer;
+    margin-bottom: 30px;
 
 }
 .blocRougeDisquette{
@@ -269,7 +270,8 @@
     flex-direction: column;
     background-color: #c9c9c9;
     width: 90vw;
-    margin: 20px auto;
+    margin: 20px auto 50px auto;
+    
     border-radius: 20px;
 }
 .img-contraintes-gsb-symfony{
@@ -339,6 +341,7 @@
     background-color: #005377;
     margin: 10px auto;
     display: flex;
+    padding: 5px;
     justify-content: center;
     color: white;
    
@@ -385,6 +388,7 @@
     .url{
         width:83vw;
     }
+    
     .interfacegsbsymfony img{
         width: 37vw;
         margin: 10px;
