--- a/css/frameEcranCV.css
+++ b/css/frameEcranCV.css
@@ -71,7 +71,7 @@
 .skills{
   display: flex;
   justify-content: space-around;
-  margin: 50px auto;
+  margin: 80px auto;
   width: 90vw;
   background-color: #465284;
   border-radius: 15px;
@@ -101,7 +101,11 @@
 .img-logo{
   text-align: right;
 }
-
+@media only screen and (max-width: 650px) {
+  .card-stage:nth-child(2) {
+    margin: 0 auto auto auto !important;
+}
+}
 @media only screen and (min-width: 768px) {
   .img-logo{
     text-align: initial;
