--- a/css/frameEcranProjets.css
+++ b/css/frameEcranProjets.css
@@ -120,7 +120,7 @@
     overflow-y: scroll;
     --webkit--overflow-y:scroll;
     scrollbar-width: none;
-    margin: 29px auto 0 auto;
+    margin: 42px auto;
 }
 
 .card{
